The hero image overflow issued fixed.
It turns out that the solution is simply using z-index with position on the header

--- a/src/Components/header/header.css
+++ b/src/Components/header/header.css
@@ -1,7 +1,9 @@
-/* header{
-    background-color: aqua;
-    z-index: 10;
-} */
+header{
+   position: relative;
+
+    background-color: white;
+   z-index: 10;
+}
 
 .container{
     width: 90%;
